--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Core Grid CSS */
+@import 'ag-grid-community/styles/ag-grid.css';
+/* Quartz Theme Specific CSS */
+@import 'ag-grid-community/styles/ag-theme-balham.css';
+@import 'ag-grid-community/styles/ag-theme-quartz.css';
+@import "bootstrap-icons/font/bootstrap-icons.css";
+
+.breadcrumbs{
+    padding-bottom: 10px;
+}
