clean build after feature add

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,20 +5,14 @@
         <div class="inner">
          
           <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link active" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link active" href="/">Home</a>
+           
              <a  (click)="auth.loginWithRedirect()" class="nav-link btn btn-link">Login</a>
           </nav>
         </div>
       </header>
 
-      <main role="main" class="inner cover">
-        <h1 class="cover-heading">Manage Your Testing</h1>
-        <p class="lead">Gordon QA is an OpenSource project designed to manage software tests, feature sets and test sets.</p>
-        <p class="lead">
-          <a  class="btn btn-lg btn-secondary"  (click)="auth.loginWithRedirect()">Login</a>
-        </p>
-      </main>
+     
 
       <footer class="mastfoot mt-auto">
         <div class="inner">
