--- a/src/app/pages/template-details/template-details.component.html
+++ b/src/app/pages/template-details/template-details.component.html
@@ -15,7 +15,7 @@
 
 <div class="row">
     <div class="col-sm-10">
-        <h1>{{testName}} Template</h1>
+        <h1>{{testName}}</h1>
     </div>
     <div class="col-sm-2">
 
